--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
             <select
               name="cars"
               id="cars"
-              required multiple
+              multiple
             >
               <option>BMW</option>
               <option>Audi</option>
